can probably get away with just the one asymmetry rule

--- a/firewall.conf
+++ b/firewall.conf
@@ -6,7 +6,7 @@ interfaces <*> {
                 /* external-facing */
                 input-list [ measurement* border-policy-v? ratelimit* allow-any* ];
                 /* internal-facing, TODO: measurement */
-                input-list [ multihop-peers-v? lan-policy-v? allow-any* ]
+                input-list [ measurement* lan-policy-v? allow-any* ]
                 /* external facing */
                 output antispoof-v?
             }
@@ -290,25 +290,14 @@ firewall {
                 }
             }
             /* Packets to neighbor assigned local address may have come via another border */
-            term asymmetric-routing-part1 {
-                from {
-                    destination-prefix-list {
-                        depaul-v4 except;
-                    } 
-                }
-                then {
-                    count asymmetric-routing-part1;
-                    discard;
-                }
-            }
-            term asymmetric-routing-part2 {
+            term asymmetric-routing {
                 from {
                     destination-prefix-list {
                         bgp-neighbors-v4;
                     }
                 }
                 then {
-                    count asymmetric-routing-part2;
+                    count asymmetric-routing;
                     accept;
                 }
             } 
@@ -563,24 +552,14 @@ firewall {
                 }
             }
             /* Packets to neighbor assigned local address may have come via another border */
-            term asymmetric-routing-part1 {
-                from {
-                    destination-prefix-list {
-                        depaul-v6 except;
-                    }
-                then {
-                    count asymmetric-routing-part1;
-                    discard;
-                }
-            }
-            term asymmetric-routing-part2 {
+            term asymmetric-routing {
                 from {
                     destination-prefix-list {
                         bgp-neighbors-v6;
                     }
                 }
                 then {
-                    count asymmetric-routing-part2;
+                    count asymmetric-routing;
                     accept;
                 }
             } 
