--- a/firewall.conf
+++ b/firewall.conf
@@ -6,7 +6,7 @@ interfaces <*> {
                 /* external-facing */
                 input-list [ measurement* border-policy-v? ratelimit* allow-any* ];
                 /* internal-facing, TODO: measurement */
-                input-list [ measurement* lan-policy-v? allow-any* ]
+                input-list [ measurement* irl-policy-v? allow-any* ]
                 /* external facing */
                 output antispoof-v?
             }
