one more s/lan/irl/

--- a/firewall.conf
+++ b/firewall.conf
@@ -593,7 +593,7 @@ firewall {
                 then next term;
             }
         }
-        filter lan-policy-v6 {
+        filter irl-policy-v6 {
             interface-specific;
             term icmp6 {
                 from {
