--- a/firewall.conf
+++ b/firewall.conf
@@ -4,9 +4,9 @@ interfaces <*> {
         family <*> {
             filter {
                 /* external-facing */
-                input-list [ measurement* border-policy-v? ratelimit* allow-any* ];
+                input-list [ measurement-v? border-policy-v? ratelimit-?e-v? allow-any-v? ];
                 /* internal-facing, TODO: measurement */
-                input-list [ measurement* irl-policy-v? allow-any* ]
+                input-list [ measurement-v? irl-policy-v? allow-any-v? ]
                 /* external facing */
                 output antispoof-v?
             }
@@ -102,7 +102,7 @@ firewall {
         then discard;
     }
     family inet {
-        filter measurement {
+        filter measurement-v4 {
             interface-specific;
             term tcp {
                 from {
@@ -222,7 +222,7 @@ firewall {
                 then next term;
             }
         }
-        filter ratelimit-ge {
+        filter ratelimit-ge-v4 {
             interface-specific;
             term udp {
                 from {
@@ -246,7 +246,7 @@ firewall {
                 then next term;
             }
         }
-        filter ratelimit-xe {
+        filter ratelimit-xe-v4 {
             interface-specific;
             term udp {
                 from {
@@ -270,7 +270,7 @@ firewall {
                 then next term;
             }
         }
-        filter allow-any {
+        filter allow-any-v4 {
             term default {
                 then accept;
             }
@@ -306,29 +306,6 @@ firewall {
                     count default-deny;
                     discard;
                 }
-            }
-        }
-        /* non-local BGP sessions may relay through this router */
-        filter multihop-peers-v4 {
-            interface-specific;
-            term peers {
-                from {
-                    source-prefix-list {
-                        multihop-peers-v4;
-                    }
-                    destination-prefix-list {
-                        depaul-v4;
-                    }
-                    protocol tcp;
-                    port bgp;
-                }
-                then {
-                    count peers;
-                    accept;
-                }
-            }
-            term default {
-                then next term;
             }
         }
         filter irl-policy-v4 {
@@ -568,29 +545,6 @@ firewall {
                     count default-deny;
                     discard;
                 }
-            }
-        }
-        /* non-local BGP sessions may relay through this router */
-        filter multihop-peers-v6  {
-            interface-specific;
-            term peers {
-                from {
-                    source-prefix-list {
-                        multihop-peers-v6;
-                    }
-                    destination-prefix-list {
-                        depaul-v6;
-                    }
-                    payload-protocol tcp;
-                    port bgp;
-                }
-                then {
-                    count peers;
-                    accept;
-                }
-            }
-            term default {
-                then next term;
             }
         }
         filter irl-policy-v6 {
