syslog by default, bmp term

--- a/loopback.conf
+++ b/loopback.conf
@@ -4,6 +4,14 @@
 # https://tools.ietf.org/html/rfc7454
 
 # add loopback addrs to ensure prefix-list is not empty;
+prefix-list bmp-stations-v4 {
+    127.0.0.0/8;
+    apply-path "routing-options bmp station <*> station-address <*.*.*.*>";
+}
+prefix-list bmp-stations-v6 {
+    ::1/128;
+    apply-path "routing-options bmp station <*> station-address <*:*:*>";
+}
 prefix-list dns-servers-v4 {
     127.0.0.0/8;
     apply-path "system name-server <*.*.*.*>";
@@ -95,6 +103,19 @@ firewall {
                 }
                 then {
                     count bgp;
+                    accept;
+                }
+            }
+            term bmp {
+                from {
+                    source-prefix-list {
+                        bmp-stations-v4;
+                    }
+                    protocol tcp;
+                    source-port 1790;
+                }
+                then {
+                    count bmp;
                     accept;
                 }
             }
@@ -234,7 +255,7 @@ firewall {
             term default {
                 then {
                     count default;
-                    /* enable for debugging: log; */
+                    syslog;
                     discard;
                 }
             }
@@ -272,6 +293,19 @@ firewall {
                 }
                 then {
                     count bgp;
+                    accept;
+                }
+            }
+            term bmp {
+                from {
+                    source-prefix-list {
+                        bmp-stations-v6;
+                    }
+                    payload-protocol tcp;
+                    source-port 1790;
+                }
+                then {
+                    count bmp;
                     accept;
                 }
             }
@@ -405,7 +439,7 @@ firewall {
             term default {
                 then {
                     count default;
-                    /* enable for debugging: log; */
+                    syslog;
                     discard;
                 }
             }
