remove our own communities

--- a/sanitize.conf
+++ b/sanitize.conf
@@ -78,6 +78,9 @@ policy-options {
             from as-path too-many-hops;
             then reject;
         }
+       term depaul-community {
+           then community delete depaul-asn;
+       }
         /* TODO: long-prepends - not currently possible in Junos */
     }
     policy-statement default-deny-all {
@@ -95,6 +98,9 @@ policy-options {
         as-path iana-reserved ".* [65552-131071] .*";
     }
     as-path too-many-hops ".{20,}";
+    community depaul-asn {
+        members "^((20130) | (54728)):(.*)$";
+    }
 }
 protocols {
     bgp {
