just remove all communities

--- a/sanitize.conf
+++ b/sanitize.conf
@@ -78,9 +78,9 @@ policy-options {
             from as-path too-many-hops;
             then reject;
         }
-       term depaul-community {
-           then community delete depaul-asn;
-       }
+        term unwanted-community {
+            then community delete any-community;
+        }
         /* TODO: long-prepends - not currently possible in Junos */
     }
     policy-statement default-deny-all {
@@ -98,9 +98,7 @@ policy-options {
         as-path iana-reserved ".* [65552-131071] .*";
     }
     as-path too-many-hops ".{20,}";
-    community depaul-asn {
-        members "^((20130) | (54728)):(.*)$";
-    }
+    community any-community members *:*;
 }
 protocols {
     bgp {
