address #1 - add terminators and enclosures

--- a/sanitize.conf
+++ b/sanitize.conf
@@ -104,4 +104,8 @@ protocols {
     bgp {
         group <*> {
             neighbor <*> {
-                import [ /* ?allow-default-route */ sanitize-bgp /* localpref-? */ ] 
+                import [ /* ?allow-default-route */ sanitize-bgp /* localpref-? */ ];
+            }
+        }
+    }
+}
